--- a/platformio.ini
+++ b/platformio.ini
@@ -8,7 +8,7 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:teensy40]
-platform = teensy
-board = teensy40
+[env:megaatmega2560]
+platform = atmelavr
+board = megaatmega2560
 framework = arduino
